feat(build): switch to vite to build react app

--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Download</title>
-  <script src="/dist/download.js"></script>
+  <script type="module" src="./src/download/index.ts"></script>
 </head>
 
 </html>
