feat(download): track download progress

--- a/download.html
+++ b/download.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Download</title>
-  <script type="module" src="./src/download/index.ts"></script>
+  <div id="root"></div>
+  <script type="module" src="./src/download/index.tsx"></script>
 </head>
 
 </html>
